--- a/gb/19/8/25/n11476486.md
+++ b/gb/19/8/25/n11476486.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qvis220/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qvis220/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qvis220/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qvis220/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qvis220/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qvis220/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qvis220/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qvis220/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qvis220/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qvis220/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qvis220/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qvis220/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qvis220/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qvis220/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qvis220/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qvis220/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/qvis220/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qvis220/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/qvis220/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qvis220/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qvis220/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qvis220/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qvis220/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qvis220/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>嘉义市特色美食及伴手礼征选8/30报名截止</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/60b0adac099e8aff107c4b4888f97e36-600x400.jpg" />
 <h6>嘉义市特色美食及伴手礼征选海报。（嘉义市政府提供）
 </h6>
 <hr>
-<p>【大纪元2019年08月25日讯】（大纪元记者李撷璎台湾嘉义报导）<ahref="https://github.com/qvis220/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89%E5%B8%82.md#1">嘉义市</a>政府“108年度嘉义市<ahref="https://github.com/qvis220/djy/blob/master/gb/tag/%E7%89%B9%E8%89%B2%E7%BE%8E%E9%A3%9F.md#1">特色美食</a>及<ahref="https://github.com/qvis220/djy/blob/master/gb/tag/%E4%BC%B4%E6%89%8B%E7%A4%BC.md#1">伴手礼</a>”征选募集即将在8/30报名截止，<ahref="https://github.com/qvis220/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89%E5%B8%82.md#1">嘉义市</a>长黄敏惠鼓励商家业者一起加入拼经济、打造观光品牌城市。伴手礼需有商业或公司登记在嘉义市，美食有税籍登记就可参与。</p>
-<p>嘉义市长黄敏惠表示，嘉义市拼经济升格的轴心就是要“打造品牌”，从本质做起，以<ahref="https://github.com/qvis220/djy/blob/master/gb/tag/%E7%89%B9%E8%89%B2%E7%BE%8E%E9%A3%9F.md#1">特色美食</a>及<ahref="https://github.com/qvis220/djy/blob/master/gb/tag/%E4%BC%B4%E6%89%8B%E7%A4%BC.md#1">伴手礼</a>创造经济产值，真正实现“百大品牌拼经济、百种幸福在嘉义。”透过征选与行销推广，可行销嘉义市伴手礼、特色美食，并以提升包装设计方式，增加嘉义市品牌印象。把国内外旅客吸引进来、并且让他们一来再来。</p>
+<p>【大纪元2019年08月25日讯】（大纪元记者李撷璎台湾嘉义报导）<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89%E5%B8%82.md#1">嘉义市</a>政府“2019年度嘉义市<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%89%B9%E8%89%B2%E7%BE%8E%E9%A3%9F.md#1">特色美食</a>及<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BC%B4%E6%89%8B%E7%A4%BC.md#1">伴手礼</a>”征选募集即将在8/30报名截止，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89%E5%B8%82.md#1">嘉义市</a>长黄敏惠鼓励商家业者一起加入拼经济、打造观光品牌城市。伴手礼需有商业或公司登记在嘉义市，美食有税籍登记就可参与。</p>
+<p>嘉义市长黄敏惠表示，嘉义市拼经济升格的轴心就是要“打造品牌”，从本质做起，以<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%89%B9%E8%89%B2%E7%BE%8E%E9%A3%9F.md#1">特色美食</a>及<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BC%B4%E6%89%8B%E7%A4%BC.md#1">伴手礼</a>创造经济产值，真正实现“百大品牌拼经济、百种幸福在嘉义。”透过征选与行销推广，可行销嘉义市伴手礼、特色美食，并以提升包装设计方式，增加嘉义市品牌印象。把国内外旅客吸引进来、并且让他们一来再来。</p>
 <p>嘉义市是一个具有“浓厚人情味”的地方，很多游客来购物消费，也都愿意与好友分享好康讯息。美食、伴手礼就是最好的触媒，再加上嘉义市众多特色景点，一定能够吸引更多游客前来。</p>
-<p>市府建设处长陈光兴表示，“108年度嘉义市特色美食及伴手礼”征选募集分为“特色美食”及“伴手礼”两种不同类别的征选方式，其中“伴手礼”部分又分为“食品类”与“文创类(非食品伴手礼)”，伴手礼则属于竞赛性质；特色美食属于鼓励性质。伴手礼需有商业或公司登记在嘉义市，美食有税籍登记就可参与，食品伴手礼及美食相关业者皆须登录于“食品业者登录平台”才可参加。</p>
+<p>市府建设处长陈光兴表示，“2019年度嘉义市特色美食及伴手礼”征选募集分为“特色美食”及“伴手礼”两种不同类别的征选方式，其中“伴手礼”部分又分为“食品类”与“文创类(非食品伴手礼)”，伴手礼则属于竞赛性质；特色美食属于鼓励性质。伴手礼需有商业或公司登记在嘉义市，美食有税籍登记就可参与，食品伴手礼及美食相关业者皆须登录于“食品业者登录平台”才可参加。</p>
 <p>市府建设处指出，计划预计选出至少20家代表性的嘉义市伴手礼业者，将举办成果发表会由市长黄敏惠亲自颁奖表扬，业者后续还可获得搭配嘉义市国际管乐节的体验行销加持。更棒的是还能在嘉义特色美食及伴手礼的美食手册等刊物露出，以景点周边店家为主题，设计店家图文资讯。更将邀请影音及图文部落客合作行销，持续带动业者商机及名气。欢迎大家踊跃报名。</p>
 <p>报名资讯请洽嘉义市政府建设处工商科或嘉义市工商发展投资策进会粉丝专页https://www.facebook.com/idipc.chiayi/</p>
 <p>责任编辑：郑桦</p>
@@ -18,42 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/19/7/9/n11373803.md#1">黄子佼曝提亲过程 孟家拒聘金改收伴手礼</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/19/7/17/n11390294.md#1">2019屏东伴手礼暨好店征选开跑</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/19/7/29/n11416716.md#1">嘉义市特色小吃及伴手礼征选募集起跑</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/19/7/31/n11420939.md#1">中秋伴手礼吹精品风 “茶与点心”结盟抢市</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/29/n12218952.md#1">嘉义市志航国小71届毕业生活动  留下顶好回忆</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/29/n12218623.md#1">嘉有纸餐具循环友善店  废纸餐具回收成效佳</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/29/n12217675.md#1">“天佑台湾”中部法轮功学员  绿色隧道传递善念</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/27/n12215973.md#1">力挺嘉义小农！翁章梁北上现身百汇农市场</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/27/n12215685.md#1">嘉义市凿花工艺师陈佐民 培育木业新血</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/27/n12215774.md#1">端午假期文化路夜市  守法的人潮让车流顺畅</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/9/n11373803.md#1">黄子佼曝提亲过程 孟家拒聘金改收伴手礼</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/17/n11390294.md#1">2019屏东伴手礼暨好店征选开跑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/29/n11416716.md#1">嘉义市特色小吃及伴手礼征选募集起跑</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/31/n11420939.md#1">中秋伴手礼吹精品风 “茶与点心”结盟抢市</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616208.md#1">文雅国小生态健行暨校本课程小艺人表演</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616274.md#1">嘉市特色好店家 助身障者享有知的权利</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616115.md#1">嘉义邮局举办捐血活动 邀民众捐血纾解血荒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616121.md#1">虎尾建国眷村 景观环境及眷舍修缮工程动工</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616161.md#1">乐龄生活无限好 崙背乡老人会举办成果展</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615323.md#1">111学年度大学学测 国立嘉义高中成绩亮眼</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10018540.md#1" target="_blank">戏剧家英若诚的线人生涯</a></li><li><a href="https://github.com/qvis220/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11406694.md#1" target="_blank">美国会吁中共释放法轮功学员 邓翠苹女儿感谢</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/27/n12216263.md#1">宜昌水深半人高 网民疑三峡大坝葛洲坝泄洪</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/27/n12215877.md#1">中国多地降暴雨 宜昌严重内涝水淹城</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/27/n12216296.md#1">美突下令 对福建晋华前高管等三人发逮捕令</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/27/n12216208.md#1">美限制中共官员及家属签证 哪些人或受制裁</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/28/n12216895.md#1">中共全国人大代表申纪兰病亡</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/28/n12216988.md#1">防疫忙翻、难享天伦 陈时中：半年只见孙5小时</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/26/n12214620.md#1">TWICE扮白雪公主与恶皇后 170cm子瑜演小矮人</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/26/n12214760.md#1">郑敬基剪TVB工作证 吁同路艺人站港人一边</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/26/n12214868.md#1">任贤齐端午节庆生 睽违七年宣布“秘密计划”</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/26/n12215068.md#1">友人强抱4岁Max合照 隋棠发文向儿子道歉</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/5/n12163931.md#1">【命理】48岁才起运的大器晚成之命</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/27/n12215574.md#1">《地母经》预言的2020年中国水灾和后果</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/5/15/n12112533.md#1">违背原著的宝玉娶亲</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/5/23/n12131792.md#1">【康熙大帝】少年天子不动声色 智除鳌拜</a></li>
-<li><a href="https://github.com/qvis220/djy/blob/master/gb/20/6/22/n12204829.md#1">【佳人传】一门皆风雅 沈宜修的诗意桃源</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qvis220/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qvis220/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/25/n11476486.htm">嘉义市特色美食及伴手礼征选8/30报名截止</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/25/n11476486.htm">嘉义市特色美食及伴手礼征选8/30报名截止</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qvis220/djy/blob/master/gb/19/8/25/n11476486.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qvis220/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qvis220/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qvis220/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qvis220/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qvis220/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/8/25/n11476486.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
